--- a/web/src/components/PlanPicker.module.css
+++ b/web/src/components/PlanPicker.module.css
@@ -1,6 +1,7 @@
 .PlanPicker {
   position: relative;
   display: inline-block;
+  max-width: 100%;
 }
 
 .trigger {
